--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: A stunning personal blog Jekyll theme
-description: Journal is a stunning personal blog Jekyll theme with an image-focused design.
+title: break the code
+description: pwnjack's personal tech-blog.
 featured_image: /images/demo/demo-landscape.jpg
 ---
 
